--- a/assets/css/js_composer.css
+++ b/assets/css/js_composer.css
@@ -3950,14 +3950,16 @@ body.vc_frontoffice#cms #center_column h3.wpb_accordion_header:not(.ui-accordion
 }
 .bamboo.text-over-image .content {
     width: 100%;
-    position: absolute;
     text-align: center;
+    padding: 30px 10%;
 }
 .bamboo.a-region .content {
     width: 100%;
-    padding: 50px;
+    padding: 10%;
     color: white;
-    position: absolute;
+    min-height: 300px;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .bamboo.a-region .content p {
     color: white;
@@ -3968,7 +3970,8 @@ body.vc_frontoffice#cms #center_column h3.wpb_accordion_header:not(.ui-accordion
     border-radius: 20px;
     background-color: #f0f0f0;
     text-align: center;
-    padding: 50px 20px;
+    padding: 50px 10%;
+    margin: 30px 0px;
 }
 .bamboo.an-appellation .content:hover {
     background-color: #222456;
@@ -4000,4 +4003,7 @@ a.blue-btn {
 a.blue-btn:hover {
     background: #ad7b4f none repeat scroll 0 0;
     border-color: #ad7b4f;
+}
+.nopadding .vc_column_container {
+    padding: 0;
 }
